Fix scroll behavior and alter z-index

--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
     margin: 0;
 }
 
-body {
+html {
     box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+body {
     font-family: 'Archivo', sans-serif;
     font-size: 18px;
     color: white;
-    scroll-behavior: smooth;
 }
 
 a {
@@ -19,7 +22,7 @@ a {
 nav {
     width: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 9999;
     background-color: chocolate;
 }
 
